--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,2 +1,10 @@
-
-<app-root></app-root>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <app-root></app-root>
+</body>
+</html>
